# QTTest

./: README.md
Greetings/: CMakeLists.txt  dialog.ui  greet.cpp  greet.h
QTConsole/: CMakeLists.txt
QTHW2/: CMakeLists.txt  main.cpp
QTHW3/: CMakeLists.txt  dialog.ui
QTHW4/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
QTHW5/: CMakeLists.txt  dialog.cpp  dialog.h  dialog.ui  sek.cpp  sek.h
QTHW6/: CMakeLists.txt  ExampleRace.cpp  mainwindow.cpp
QTHW7/: CMakeLists.txt  mainwindow.cpp  mainwindow.h
QTHW8/: CMakeLists.txt  database.cpp  database.h  dbdata.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
QTWidhet1/: CMakeLists.txt  dialog.ui
